--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,11 @@
             <version>2.1.4</version>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
 
         <dependency>
 			<groupId>org.springframework.boot</groupId>
