added surveyor pages and create survey front-end

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.profiles.active=prod
 default.to.address=karancepheid@gmail.com
 token.expiration.length.minutes= 120
+spring.thymeleaf.cache=false
