add final merged code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.profiles.active=prod
-default.to.address=mb.bohra15@gmail.com
+default.to.address=karancepheid@gmail.com
 token.expiration.length.minutes= 120
